--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react-dom": "^17.0.13",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +24,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
+    "typescript": "^4.6.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -48,6 +52,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.38"
+    "@types/react": "^17.0.40"
   }
 }
