--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,26 @@
 {
+  "compilerOptions": {
     "compilerOptions": {
-      "compilerOptions": {
-        "module": "commonjs",
-        "noImplicitAny": true,
-        "target": "es6",
-        "baseUrl": "./",
-        "rootDir": "./",
-        "outDir": "dist/",
-        "removeComments": true,
-        "lib": ["es6", "dom", "es2017"],
-        "preserveConstEnums": true,
-        "sourceMap": true
-      },
-      "include": [
-        "./src/"
-      ]
-    }
+      "module": "commonjs",
+      "esModuleInterop": true,
+      "noImplicitAny": true,
+      "target": "es6",
+      "baseUrl": "./",
+      "rootDir": "./",
+      "outDir": "dist/",
+      "removeComments": true,
+      "lib": [
+        "es6",
+        "dom",
+        "es2017"
+      ],
+      "preserveConstEnums": true,
+      "sourceMap": true
+    },
+    "include": [
+      "./src/"
+    ],
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react"
+  }
+}
