domain name changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.getthatguac.com",
+  "homepage": "https://www.avocadoapp.co",
   "name": "avocado-landing-page",
   "version": "0.1.0",
   "private": true,
