--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^17.0.21",
     "@types/react-dom": "^17.0.13",
     "caniuse-lite": "^1.0.30001431",
+    "clsx": "^1.2.1",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
